/**!
 * Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

message Block {
  oneof type {
    Vertical vertical = 1;
    Horizontal horizontal = 2;
    Column column = 3;
    Expandable expandable = 4;
    Form form = 5;
    TabContainer tab_container = 6;
    Tab tab = 7;
  }

  bool allow_empty = 8;

  message Vertical {
  }

  message Horizontal {
    string gap = 1;
  }

  message Column {
    double weight = 1;
    string gap = 2;
  }

  message Expandable {
    string label = 1;
    bool expanded = 2;
  }

  message Form {
    string form_id = 1;
    bool clear_on_submit = 2;
  }

  message TabContainer {
  }

  message Tab {
    string label = 1;
  }

  // Next ID: 9
}
